<resources>
    <string name="app_name">Bienvenido a Corresponsal</string>
    <string name="app_btn">Iniciar sesion</string>
    <string name="app_correo">Correo Electronico</string>
    <string name="app_contrasena">Contrasena</string>
    <string name="app_tarjeta">Número de tarjeta</string>
    <string name="app_cvv">CVV</string>
    <string name="app_cliente">NOMBRE DEL CLIENTE</string>
    <string name="app_pago">valor a pagar</string>
    <string name="app_btnConfirmar">Confirmar</string>
    <string name="app_cancelar">Cancelar</string>
    <string name="app_id">Número de cédula</string>
    <string name="item_menu">Actualizar datos</string>
    <string name="item2_menu">Crear cliente</string>
    <string name="item3_menu">Cerrar sesión</string>
    <string name="app_aceptar">Aceptar</string>
    <string name="app_pin">PIN de la cuenta</string>
    <string name="app_confirmarPin">Confirmar PIN de la cuenta</string>
</resources>