<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.Corresponsal.PagoActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="204dp"
        android:layout_height="166dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="-50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circulo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="150dp"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="336dp"
        android:rotation="-10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/circulo" />

    <Button
        android:id="@+id/menu2"
        android:layout_width="78dp"
        android:layout_height="61dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/sinborde"
        android:drawableRight="@drawable/flecha"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtNombreC"
        android:layout_width="202dp"
        android:layout_height="59dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="611dp"
        android:text="Nombre Corresponsal"
        android:textColor="@color/blue"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtSaldo"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="$ Saldo Corresponsal"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreC" />

    <TextView
        android:id="@+id/txtCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="150dp"
        android:text="# Cuenta Corresponsal"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaldo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Pago con tarjeta"
        android:textAlignment="center"
        android:textColor="#4C4848"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/linea" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numeroTarjeta"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TouchTargetSizeCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_azules"
            android:ems="10"
            android:hint="@string/app_tarjeta"
            android:textSize="15dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/CVV"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="27dp"
        android:background="@color/blue"
        android:padding="6dp"
        android:text="@string/app_cvv"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeroTarjeta"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fechaMes"
        android:layout_width="73dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/CVV"
        app:layout_constraintTop_toBottomOf="@+id/numeroTarjeta"
        tools:ignore="TouchTargetSizeCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@drawable/bordes_azules"
            android:ems="10"
            android:hint="mm"
            android:textSize="14dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fechaDia"
        android:layout_width="73dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fechaMes"
        app:layout_constraintTop_toBottomOf="@+id/numeroTarjeta"
        tools:ignore="TouchTargetSizeCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@drawable/bordes_azules"
            android:ems="10"
            android:hint="dd"
            android:textSize="14dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreCliente"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CVV"
        tools:ignore="TouchTargetSizeCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_azules"
            android:ems="10"
            android:hint="@string/app_cliente"
            android:textSize="15dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/cuotas"
        android:layout_width="61dp"
        android:layout_height="29dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:text="Cuotas"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreCliente"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/spinnerCuotas"
        android:layout_width="36dp"
        android:layout_height="29dp"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_senalador"
        app:layout_constraintBottom_toTopOf="@+id/montoRetiro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreCliente"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,SpeakableTextPresentCheck">

    </Spinner>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/montoRetiro"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuotas"
        app:startIconDrawable="@drawable/simbolopesos"
        tools:ignore="TouchTargetSizeCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_azules"
            android:ems="10"
            android:hint="@string/app_pago"
            android:textSize="15dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="110dp"
        android:layout_height="36dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="141dp"
        android:background="@drawable/btns_azules"
        android:text="@string/app_btnConfirmar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/montoRetiro"
        app:layout_constraintVertical_bias="0.482"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="103dp"
        android:layout_height="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/btns_border"
        android:text="@string/app_cancelar"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/montoRetiro"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>