<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.Corresponsal.TransferenciasActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="204dp"
        android:layout_height="166dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="-50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circulo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="150dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="336dp"
        android:rotation="-10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/circulo" />

    <Button
        android:id="@+id/menu2"
        android:layout_width="78dp"
        android:layout_height="61dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/sinborde"
        android:drawableRight="@drawable/flecha"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtNombreC"
        android:layout_width="202dp"
        android:layout_height="59dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="611dp"
        android:text="Nombre Corresponsal"
        android:textColor="@color/blue"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtSaldo"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="$ Saldo Corresponsal"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreC" />

    <TextView
        android:id="@+id/txtCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="150dp"
        android:text="# Cuenta Corresponsal"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaldo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Transferencia"
        android:textAlignment="center"
        android:textColor="#4C4848"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/linea" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cedulaReceptor"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TouchTargetSizeCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_azules"
            android:ems="10"
            android:hint="Número de cédula a transferir"
            android:inputType="number"
            android:textSize="15dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/pin"
        android:layout_width="247dp"
        android:layout_height="38dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/bordes_azules"
        android:ems="10"
        android:hint="@string/app_pin"
        android:inputType="textPassword"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cedulaReceptor"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/confirmarPin"
        android:layout_width="247dp"
        android:layout_height="38dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/bordes_azules"
        android:ems="10"
        android:hint="@string/app_confirmarPin"
        android:inputType="textPassword"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cedulaEmisor"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmarPin"
        tools:ignore="TouchTargetSizeCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_azules"
            android:ems="10"
            android:hint="Número de cédula que transfiere"
            android:inputType="number"
            android:textSize="15dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/montoTransferencia"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cedulaEmisor"
        app:startIconDrawable="@drawable/simbolopesos"
        tools:ignore="TouchTargetSizeCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_azules"
            android:ems="10"
            android:hint="Monto a transferir"
            android:inputType="number"
            android:textSize="15dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="110dp"
        android:layout_height="36dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="141dp"
        android:background="@drawable/btns_azules"
        android:text="@string/app_btnConfirmar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/montoTransferencia"
        app:layout_constraintVertical_bias="0.337"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="103dp"
        android:layout_height="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/btns_border"
        android:text="@string/app_cancelar"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/montoTransferencia"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>